--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,15 +41,15 @@ jobs:
 
     - name: Set deploy environment variables
       run: |
-        echo "APP_ENV=${{ inputs.env }}" >> $GITHUB_ENV
-        echo "APP_NAME=gateway" >> $GITHUB_ENV
-        echo "APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
-        echo "IMAGE=${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}" >> $GITHUB_ENV
-        echo "HTTP_PORT=${{ steps.load_config.outputs.staging__gateway__http__port }}" >> $GITHUB_ENV
-        echo "GATEWAY_PORT=${{ steps.load_config.outputs.staging__gateway__gateway__port }}" >> $GITHUB_ENV
-        echo "GRPC_USER_HOST=${{ steps.load_config.outputs.staging__user__grpc__HOST }}" >> $GITHUB_ENV
-        echo "GRPC_USER_PORT=${{ steps.load_config.outputs.staging__user__grpc__port }}" >> $GITHUB_ENV
-        echo "DEPLOY=$(cat ./src/go/gateway/deploy.sh | base64 | tr -d '\n')" >> $GITHUB_ENV
+        echo "INPUT_APP_ENV=${{ inputs.env }}" >> $GITHUB_ENV
+        echo "INPUT_APP_NAME=gateway" >> $GITHUB_ENV
+        echo "INPUT_APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
+        echo "INPUT_IMAGE=${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}" >> $GITHUB_ENV
+        echo "INPUT_HTTP_PORT=${{ steps.load_config.outputs.staging__gateway__http__port }}" >> $GITHUB_ENV
+        echo "INPUT_GATEWAY_PORT=${{ steps.load_config.outputs.staging__gateway__gateway__port }}" >> $GITHUB_ENV
+        echo "INPUT_GRPC_USER_HOST=${{ steps.load_config.outputs.staging__user__grpc__HOST }}" >> $GITHUB_ENV
+        echo "INPUT_GRPC_USER_PORT=${{ steps.load_config.outputs.staging__user__grpc__port }}" >> $GITHUB_ENV
+        echo "INPUT_DEPLOY=$(cat ./src/go/gateway/deploy.sh | base64 | tr -d '\n')" >> $GITHUB_ENV
 
     - name: Login to ACR
       uses: aliyun/acr-login@v1
@@ -68,8 +68,8 @@ jobs:
         port: ${{ secrets.SERVER_PORT }}
         allenvs: true
         script: |
-          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
-          if docker ps --format '{{.Names}}' | grep goravel-market-$APP_NAME; then 
-            docker stop goravel-market-$APP_NAME && docker rm goravel-market-$APP_NAME 
+          docker pull $INPUT_IMAGE
+          if docker ps --format '{{.Names}}' | grep goravel-market-$INPUT_APP_NAME; then 
+            docker stop goravel-market-$INPUT_APP_NAME && docker rm goravel-market-$INPUT_APP_NAME 
           fi      
           echo $DEPLOY | base64 -d | bash
