--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,5 +71,5 @@ jobs:
           docker pull $INPUT_IMAGE
           if docker ps --format '{{.Names}}' | grep goravel-market-$INPUT_APP_NAME; then 
             docker stop goravel-market-$INPUT_APP_NAME && docker rm goravel-market-$INPUT_APP_NAME 
-          fi      
-          echo $DEPLOY | base64 -d | bash
+          fi
+          echo $INPUT_DEPLOY | base64 -d | bash
