Optimize deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,6 @@ jobs:
       uses: actions-tools/yaml-outputs@v2
       id: load_config
       with:
-        separator: '.'
         export-env-variables: false
         file-path: ./config/deploy.yml
 
@@ -24,10 +23,10 @@ jobs:
         echo "INPUT_APP_NAME=gateway" >> $GITHUB_ENV
         echo "INPUT_APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
         echo "INPUT_IMAGE=${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}" >> $GITHUB_ENV
-        echo "INPUT_HTTP_PORT=${{ steps.load_config.outputs.staging.gateway.http.port }}" >> $GITHUB_ENV
-        echo "INPUT_GATEWAY_PORT=${{ steps.load_config.outputs.staging.gateway.gateway.port }}" >> $GITHUB_ENV
-        echo "INPUT_GRPC_USER_HOST=${{ steps.load_config.outputs.staging.user.grpc.HOST }}" >> $GITHUB_ENV
-        echo "INPUT_GRPC_USER_PORT=${{ steps.load_config.outputs.staging.user.grpc.port }}" >> $GITHUB_ENV
+        echo "INPUT_HTTP_PORT=${{ steps.load_config.outputs.staging__gateway__http__port }}" >> $GITHUB_ENV
+        echo "INPUT_GATEWAY_PORT=${{ steps.load_config.outputs.staging__gateway__gateway__port }}" >> $GITHUB_ENV
+        echo "INPUT_GRPC_USER_HOST=${{ steps.load_config.outputs.staging__user__grpc__HOST }}" >> $GITHUB_ENV
+        echo "INPUT_GRPC_USER_PORT=${{ steps.load_config.outputs.staging__user__grpc__port }}" >> $GITHUB_ENV
         echo "INPUT_DEPLOY=$(cat ./src/go/gateway/deploy.sh | base64 | tr -d '\n')" >> $GITHUB_ENV
 
     - name: Login to ACR
