--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,14 +20,16 @@ jobs:
     - name: Set deploy environment variables
       run: |
         echo "INPUT_APP_ENV=${{ inputs.env }}" >> $GITHUB_ENV
-        echo "INPUT_APP_NAME=gateway" >> $GITHUB_ENV
-        echo "INPUT_APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
+        echo "INPUT_APP_NAME=${inputs.tag%-*}" >> $GITHUB_ENV
         echo "INPUT_IMAGE=${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}" >> $GITHUB_ENV
+        echo "INPUT_DEPLOY=$(cat ./src/go/$INPUT_APP_NAME/deploy.sh | base64 | tr -d '\n')" >> $GITHUB_ENV
+        
+        echo "INPUT_GATEWAY_APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
+
         echo "INPUT_HTTP_PORT=${{ steps.load_config.outputs.staging__gateway__http__port }}" >> $GITHUB_ENV
         echo "INPUT_GATEWAY_PORT=${{ steps.load_config.outputs.staging__gateway__gateway__port }}" >> $GITHUB_ENV
         echo "INPUT_GRPC_USER_HOST=${{ steps.load_config.outputs.staging__user__grpc__HOST }}" >> $GITHUB_ENV
         echo "INPUT_GRPC_USER_PORT=${{ steps.load_config.outputs.staging__user__grpc__port }}" >> $GITHUB_ENV
-        echo "INPUT_DEPLOY=$(cat ./src/go/gateway/deploy.sh | base64 | tr -d '\n')" >> $GITHUB_ENV
 
     - name: Login to ACR
       uses: aliyun/acr-login@v1
