--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -20,9 +20,9 @@ jobs:
       id: env_setup
       run: |
         REPO_TAG=${GITHUB_REF##*/}
-        SERVER_NAME=${REPO_TAG%-*}
+        APP_NAME=${REPO_TAG%-*}
         echo "REPO_TAG=$REPO_TAG" >> $GITHUB_ENV
-        echo "SERVER_NAME=$SERVER_NAME" >> $GITHUB_ENV
+        echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
         echo "::set-output name=tag::${GITHUB_REF##*/}"
 
     - uses: actions/setup-go@v5
@@ -41,7 +41,7 @@ jobs:
       run: cd ./src/go && go mod tidy
 
     - name: go build
-      run: cd ./src/go/$SERVER_NAME && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build --ldflags '-extldflags -static"' -o main .
+      run: cd ./src/go/$APP_NAME && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build --ldflags '-extldflags -static"' -o main .
 
     - name: Login to ACR
       uses: aliyun/acr-login@v1
@@ -52,7 +52,7 @@ jobs:
         login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
 
     - name: Build the Docker image
-      run: cd ./src/go/$SERVER_NAME && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
+      run: cd ./src/go/$APP_NAME && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
 
     - name: Push the Docker image
       run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
