--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
     # You only need to modify this step when you add a new microservice.
     - name: Set deploy environment variables
       run: |
+        # DEFAULT VARIABLES, DONT MODIFY
         TAG=${{ inputs.tag }}
         APP_NAME=${TAG%-*}
         echo "INPUT_APP_ENV=${{ inputs.env }}" >> $GITHUB_ENV
@@ -26,8 +27,8 @@ jobs:
         echo "INPUT_IMAGE=${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}" >> $GITHUB_ENV
         echo "INPUT_DEPLOY=$(cat ./src/go/$APP_NAME/deploy.sh | base64 | tr -d '\n')" >> $GITHUB_ENV
         
+        # CUSTOM VARIABLES, MODIFY WHEN YOU ADD A NEW MICROSERVICE
         echo "INPUT_GATEWAY_APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
-
         echo "INPUT_HTTP_PORT=${{ steps.load_config.outputs.staging__gateway__http__port }}" >> $GITHUB_ENV
         echo "INPUT_GATEWAY_PORT=${{ steps.load_config.outputs.staging__gateway__gateway__port }}" >> $GITHUB_ENV
         echo "INPUT_GRPC_USER_HOST=${{ steps.load_config.outputs.staging__user__grpc__HOST }}" >> $GITHUB_ENV
@@ -41,7 +42,7 @@ jobs:
         region-id: ${{ secrets.ALIYUN_ACR_REGION_ID }}
         login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
 
-    - name: Deploy gateway
+    - name: Deploy
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.SERVER_HOST }}
