--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
     - name: Set environment variables
       id: env_setup
       run: |
-        REPO_TAG=${GITHUB_REF##*/}
-        APP_NAME=${REPO_TAG%-*}
-        echo "REPO_TAG=$REPO_TAG" >> $GITHUB_ENV
+        TAG=${GITHUB_REF##*/}
+        APP_NAME=${TAG%-*}
+        echo "TAG=$TAG" >> $GITHUB_ENV
         echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
         echo "::set-output name=tag::${GITHUB_REF##*/}"
 
@@ -52,10 +52,10 @@ jobs:
         login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
 
     - name: Build the Docker image
-      run: cd ./src/go/$APP_NAME && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
+      run: cd ./src/go/$APP_NAME && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$TAG .
 
     - name: Push the Docker image
-      run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+      run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$TAG
 
   deploy-staging:
     needs: build
