--- a/src/proto/Makefile
+++ b/src/proto/Makefile
@@ -20,6 +20,6 @@ package:
 		package/package.proto
 
 doc:
-	protoc -I=./ --doc_out=../doc --doc_opt=html,index.html */*.proto
+	protoc -I=./ --doc_out=../doc --doc_opt=doc.tmpl,index.html */*.proto
 
 all: base user package doc
