implement pagination for getTags

--- a/src/proto/Makefile
+++ b/src/proto/Makefile
@@ -17,7 +17,8 @@ package:
 		--go_out=../go/proto --go_opt=paths=source_relative \
 		--go-grpc_out=../go/proto --go-grpc_opt=paths=source_relative \
 		--grpc-gateway_out=../go/proto --grpc-gateway_opt=paths=source_relative,generate_unbound_methods=true \
-		package/package.proto
+		package/package.proto \
+		package/tag.proto
 
 doc:
 	protoc -I=./ --doc_out=../doc --doc_opt=doc.tmpl,index.html */*.proto
