--- a/src/go/gateway/Dockerfile
+++ b/src/go/gateway/Dockerfile
@@ -8,7 +8,8 @@ COPY ./public/ /www/public/
 COPY ./storage/ /www/storage/
 COPY ./resources/ /www/resources/
 
-ENV APP_ENV=${APP_ENV}  \
+ENV APP_NAME=gateway \
+    APP_ENV=${APP_ENV}  \
     APP_KEY=${APP_KEY} \
     APP_DEBUG=${APP_DEBUG} \
     APP_HOST=${APP_HOST} \
