--- a/src/go/package/.env.example
+++ b/src/go/package/.env.example
@@ -1,10 +1,8 @@
-APP_NAME=Goravel
+APP_NAME=package
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_HOST=127.0.0.1
-APP_PORT=3000
 
 GRPC_HOST=
 GRPC_PORT=
