add package service

--- a/src/go/gateway/Dockerfile
+++ b/src/go/gateway/Dockerfile
@@ -16,6 +16,8 @@ ENV APP_NAME=gateway \
     APP_PORT=${APP_PORT} \
     GRPC_USER_HOST=${GRPC_USER_HOST} \
     GRPC_USER_PORT=${GRPC_USER_PORT} \
+    GRPC_PACKAGE_HOST=${GRPC_PACKAGE_HOST} \
+    GRPC_PACKAGE_PORT=${GRPC_PACKAGE_PORT} \
     GATEWAY_HOST=${GATEWAY_HOST} \
     GATEWAY_PORT=${GATEWAY_PORT}
 
