--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,46 +6,5 @@ on:
   pull_request:
 jobs:
   test:
-    strategy:
-      matrix:
-        go:
-          - "1.21"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-      - name: go mod pakcage cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ matrix.go }}-${{ hashFiles('**/go.mod') }}
-      - name: Install dependencies
-        run: cd src/go && go mod tidy
-      - name: Run tests
-        run: cd src/go && go test ./...
-  windows:
-    strategy:
-      matrix:
-        go:
-          - "1.21"
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-      - name: go mod pakcage cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ matrix.go }}-${{ hashFiles('**/go.mod') }}
-      - name: Install dependencies
-        run: cd src/go && go mod tidy
-      - name: Run tests
-        run: cd src/go && go test ./...
+    uses: goravel/.github/.github/workflows/test.yml@master
+    secrets: inherit
