--- a/.github/workflows/check_pr_title.yml
+++ b/.github/workflows/check_pr_title.yml
@@ -3,9 +3,5 @@ on:
   pull_request:
 jobs:
   check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: Slashgear/action-check-pr-title@v4.3.0
-        with:
-          regexp: "^(feat|fix|docs|style|refactor|perf|test|workflow|build|ci|chore|types|wip|release|revert)(\\(.+\\))?!?: .+"
-          helpMessage: "Your PR title is invalid. Please follow the Conventional Commits specification: https://www.conventionalcommits.org/en/v1.0.0/"
+    uses: goravel/.github/.github/workflows/check_pr_title.yml@master
+    secrets: inherit
