feat: deploy package (#55)
* update dependency

* optimize build

* fix typo

* fix typo

* change db driver

* fix typo

* add the content of add a new service to readme

* add package service

* update readme

* update deploy

* rebase

* optimize action

* update action

* update action

--- a/deploy/config.yml
+++ b/deploy/config.yml
@@ -1,7 +1,7 @@
 staging:
   db:
     host: postgres
-    port: 5432
+    port: 5433
   redis:
     host: redis
     port: 6380
@@ -20,3 +20,5 @@ staging:
     grpc:
       host: package
       port: 4021
+    db:
+      database: package
