--- a/src/go/gateway/Dockerfile
+++ b/src/go/gateway/Dockerfile
@@ -8,14 +8,6 @@ COPY ./public/ /www/public/
 COPY ./storage/ /www/storage/
 COPY ./resources/ /www/resources/
 
-ENV APP_ENV=${APP_ENV}  \
-    APP_KEY=${APP_KEY} \
-    APP_DEBUG=${APP_DEBUG} \
-    APP_HOST=${APP_HOST} \
-    APP_PORT=${APP_PORT} \
-    GRPC_USER_HOST=${GRPC_USER_HOST} \
-    GRPC_USER_PORT=${GRPC_USER_PORT} \
-    GATEWAY_HOST=${GATEWAY_HOST} \
-    GATEWAY_PORT=${GATEWAY_PORT}
+ENV APP_NAME=gateway
 
 ENTRYPOINT ["/www/main"]
