--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,26 @@ jobs:
     # You only need to modify this step when you add a new microservice.
     - name: Set environment variables
       run: |
+        # CUSTOM VARIABLES, MODIFY WHEN YOU ADD A NEW MICROSERVICE
+        
+        # gateway
+        echo "INPUT_GATEWAY_APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
+        echo "INPUT_GATEWAY_HTTP_PORT=${{ steps.load_config.outputs.staging__gateway__http__port }}" >> $GITHUB_ENV
+        echo "INPUT_GATEWAY_GATEWAY_PORT=${{ steps.load_config.outputs.staging__gateway__gateway__port }}" >> $GITHUB_ENV
+        
+        # user
+        echo "INPUT_USER_APP_KEY=${{ secrets.USER_APP_KEY }}" >> $GITHUB_ENV
+        echo "INPUT_USER_JWT_SECRET=${{ secrets.USER_JWT_SECRET }}" >> $GITHUB_ENV
+        echo "INPUT_USER_GRPC_HOST=${{ steps.load_config.outputs.staging__user__grpc__host }}" >> $GITHUB_ENV
+        echo "INPUT_USER_GRPC_PORT=${{ steps.load_config.outputs.staging__user__grpc__port }}" >> $GITHUB_ENV
+        echo "INPUT_USER_DB_DATABASE=${{ steps.load_config.outputs.staging__user__db__database }}" >> $GITHUB_ENV
+        
+        # package
+        echo "INPUT_PACKAGE_APP_KEY=${{ secrets.PACKAGE_APP_KEY }}" >> $GITHUB_ENV
+        echo "INPUT_PACKAGE_GRPC_HOST=${{ steps.load_config.outputs.staging__package__grpc__host }}" >> $GITHUB_ENV
+        echo "INPUT_PACKAGE_GRPC_PORT=${{ steps.load_config.outputs.staging__package__grpc__port }}" >> $GITHUB_ENV
+        echo "INPUT_PACKAGE_DB_DATABASE=${{ steps.load_config.outputs.staging__package__db__database }}" >> $GITHUB_ENV
+
         # DEFAULT VARIABLES, DONT MODIFY
         TAG=${{ inputs.tag }}
         APP_NAME=${TAG%-*}
@@ -37,17 +57,7 @@ jobs:
         echo "INPUT_MAIL_USERNAME=${{ secrets.MAIL_USERNAME }}" >> $GITHUB_ENV
         echo "INPUT_MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}" >> $GITHUB_ENV
 
-        # CUSTOM VARIABLES, MODIFY WHEN YOU ADD A NEW MICROSERVICE
-        echo "INPUT_GATEWAY_APP_KEY=${{ secrets.GATEWAY_APP_KEY }}" >> $GITHUB_ENV
-        echo "INPUT_GATEWAY_HTTP_PORT=${{ steps.load_config.outputs.staging__gateway__http__port }}" >> $GITHUB_ENV
-        echo "INPUT_GATEWAY_GATEWAY_PORT=${{ steps.load_config.outputs.staging__gateway__gateway__port }}" >> $GITHUB_ENV
-        
-        echo "INPUT_USER_APP_KEY=${{ secrets.USER_APP_KEY }}" >> $GITHUB_ENV
-        echo "INPUT_USER_JWT_SECRET=${{ secrets.USER_JWT_SECRET }}" >> $GITHUB_ENV
-        echo "INPUT_USER_GRPC_HOST=${{ steps.load_config.outputs.staging__user__grpc__host }}" >> $GITHUB_ENV
-        echo "INPUT_USER_GRPC_PORT=${{ steps.load_config.outputs.staging__user__grpc__port }}" >> $GITHUB_ENV
-        echo "INPUT_USER_DB_DATABASE=${{ steps.load_config.outputs.staging__user__db__database }}" >> $GITHUB_ENV
-
+      # ************************** DONT MODIFY **************************
     - name: Login to ACR
       uses: aliyun/acr-login@v1
       with:
