--- a/src/go/package/Dockerfile
+++ b/src/go/package/Dockerfile
@@ -1,24 +1,15 @@
-FROM golang:alpine AS builder
-
-ENV GO111MODULE=on \
-    CGO_ENABLED=0  \
-    GOARCH="amd64" \
-    GOOS=linux
-
-WORKDIR /build
-COPY . .
-RUN go mod tidy
-RUN go build --ldflags "-extldflags -static" -o main .
-
 FROM alpine:latest
 
 WORKDIR /www
 
-COPY --from=builder /build/main /www/
-COPY --from=builder /build/database/ /www/database/
-COPY --from=builder /build/public/ /www/public/
-COPY --from=builder /build/storage/ /www/storage/
-COPY --from=builder /build/resources/ /www/resources/
-COPY --from=builder /build/.env /www/.env
+COPY ./main /www/
+COPY ./database/ /www/database/
+COPY ./public/ /www/public/
+COPY ./storage/ /www/storage/
+COPY ./resources/ /www/resources/
+COPY ./lang/ /www/lang/
+
+ENV APP_NAME=package \
+    GRPC_HOST=0.0.0.0
 
 ENTRYPOINT ["/www/main"]
